--- a/.gitignore
+++ b/.gitignore
@@ -103,6 +103,12 @@ venv.bak/
 # mypy
 .mypy_cache/
 
+# yarn and javascript
+node_modules/
+
+# Django static files
+static
+media
 
 # Extra files
 protein_cache/
