--- a/dna_alignment_manager/package.json
+++ b/dna_alignment_manager/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-typescript": "^7.6.0",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
+    "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "eslint": "^6.6.0",
