--- a/dna_alignment_manager/tsconfig.json
+++ b/dna_alignment_manager/tsconfig.json
@@ -6,8 +6,9 @@
         "module": "es6",
         "target": "es5",
         "jsx": "react",
-        "allowJs": true
-    },
+        "allowJs": true,
+        "moduleResolution": "node"
+        },
     "exclude": [
         "node_modules"
     ]
