--- a/k8s-configs/app/dna_alignment_manager_minikube.yaml
+++ b/k8s-configs/app/dna_alignment_manager_minikube.yaml
@@ -16,26 +16,22 @@ spec:
     spec:
       containers:
       - name: dna_alignment_manager
-        image: gcr.io/{{ GOOGLE_CLOUD_PROJECT }}/dna_alignment_manager:latest
-        {% if minikube %}
+        image: gcr.io/ginkgo-interview/dna_alignment_manager:latest
+        
         imagePullPolicy: IfNotPresent
-       {%- endif %}
         ports:
         - containerPort: 8000
-      {% if hot_reload %}
+      
       volumeMounts:
       - name: reload
         mountPath: /app
-      {%- endif %}
       volumes:
       - name: secrets
         secret:
-          secretName: db-passwords
-      {%-if hot_reload -%}
-      - name: reload
+          secretName: db-passwords- name: reload
         hostPath:
-          path: {{ hotreload_directory }}
-      {% endif %}
+          path: /home/fvannes/Documents/jobs/ginkgo/DNA-Alignment-App/dna_alignment_manager
+      
 ---
 apiVersion: v1
 kind: Service
