--- a/dna_alignment_manager/package.json
+++ b/dna_alignment_manager/package.json
@@ -17,10 +17,13 @@
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "css-loader": "^3.2.0",
     "eslint": "^6.6.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "style-loader": "^1.0.0",
     "ts-loader": "^6.2.1",
+    "typed-css-modules": "^0.6.3",
     "typescript": "^3.6.4",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
